// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cache cache.restore replaces cache.{store{Reader,Writer},maybeBroadcastWatch} 1`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "a": "ay",
    "b": "bee",
    "c": "see",
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 1`] = `
{
  "__META": {
    "extraRootIds": [
      "foo",
    ],
  },
  "bar": {
    "i": 7,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 2`] = `
{
  "__META": {
    "extraRootIds": [
      "foo",
    ],
  },
  "bar": {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 3`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 4`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 5`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 6`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 1`] = `
{
  "__META": {
    "extraRootIds": [
      "foo",
    ],
  },
  "bar": {
    "i": 7,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 2`] = `
{
  "__META": {
    "extraRootIds": [
      "foo",
    ],
  },
  "bar": {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 3`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 4`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 5`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 6`] = `
{
  "__META": {
    "extraRootIds": [
      "bar",
      "foo",
    ],
  },
  "bar": {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": {
      "__ref": "bar",
    },
  },
}
`;

exports[`InMemoryCache#modify should allow invalidation using details.INVALIDATE 1`] = `
{
  "Author:{"name":"Maria Dahvana Headley"}": {
    "__typename": "Author",
    "name": "Maria Dahvana Headley",
  },
  "Book:{"isbn":"0374110034"}": {
    "__typename": "Book",
    "author": {
      "__ref": "Author:{"name":"Maria Dahvana Headley"}",
    },
    "isbn": "0374110034",
    "title": "Beowulf: A New Translation",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "currentlyReading": {
      "__ref": "Book:{"isbn":"0374110034"}",
    },
  },
}
`;

exports[`TypedDocumentNode<Data, Variables> should determine Data and Variables types of {write,read}{Query,Fragment} 1`] = `
{
  "Author:{"name":"John C. Mitchell"}": {
    "__typename": "Author",
    "name": "John C. Mitchell",
  },
  "Book:{"isbn":"0262133210"}": {
    "__typename": "Book",
    "author": {
      "__ref": "Author:{"name":"John C. Mitchell"}",
    },
    "isbn": "0262133210",
    "title": "Foundations for Programming Languages",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "book({"isbn":"0262133210"})": {
      "__ref": "Book:{"isbn":"0262133210"}",
    },
  },
}
`;

exports[`TypedDocumentNode<Data, Variables> should determine Data and Variables types of {write,read}{Query,Fragment} 2`] = `
{
  "Author:{"name":"Harold Abelson"}": {
    "__typename": "Author",
    "name": "Harold Abelson",
  },
  "Author:{"name":"John C. Mitchell"}": {
    "__typename": "Author",
    "name": "John C. Mitchell",
  },
  "Book:{"isbn":"0262133210"}": {
    "__typename": "Book",
    "author": {
      "__ref": "Author:{"name":"John C. Mitchell"}",
    },
    "isbn": "0262133210",
    "title": "Foundations for Programming Languages",
  },
  "Book:{"isbn":"0262510871"}": {
    "__typename": "Book",
    "author": {
      "__ref": "Author:{"name":"Harold Abelson"}",
    },
    "isbn": "0262510871",
    "title": "Structure and Interpretation of Computer Programs",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "book({"isbn":"0262133210"})": {
      "__ref": "Book:{"isbn":"0262133210"}",
    },
  },
  "__META": {
    "extraRootIds": [
      "Book:{"isbn":"0262510871"}",
    ],
  },
}
`;
